--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,7 @@
     -->
 
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" />
-    <title>React Redux App</title>
+    <title>Alexandre Messang - site CV</title>
     <style type="text/css">
       body {
         margin: 0;
